<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingRight="10dp"
        android:paddingBottom="6dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:gravity="center|end"
            android:text="@string/money"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_money"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/money_hint"
            android:inputType="numberSigned"
            android:textSize="18sp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingRight="10dp"
        android:paddingBottom="6dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:gravity="center|end"
            android:text="@string/time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:hint="@string/select_time"
            android:textSize="18sp"
            tools:ignore="Autofill" />
    </LinearLayout>
</LinearLayout>